@@ -109,6 +109,7 @@ In programs:
 * Fixed join over a different axis in sfomp and sfmpi
 * Fixed mwt= parameter in sfconjgrad
 * Fixed half-order differentiation in sfslant
+* Fixed offset handling in sfinmo
 
 In the build system:
 
